--- a/signupForm/static/signupForm/form.css
+++ b/signupForm/static/signupForm/form.css
@@ -41,6 +41,12 @@
 .form-control
 {
     margin-bottom:0.5rem;
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height:2;
 }
 
 .form-control,.form-select,input
@@ -48,6 +54,11 @@
     border-radius: 10px;
 } 
 
+.form-control::placeholder{
+    font-family: "Inter", sans-serif;
+    font-size:1rem;
+    font-weight: 500;
+}
 
 .registerbtn {
     background-color:#93B5D2; 
