--- a/signupForm/static/signupForm/form.css
+++ b/signupForm/static/signupForm/form.css
@@ -5,6 +5,7 @@
     box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1);
     height: 100%; 
     margin-top:20px;
+    margin-left:2px;
 }
 
 .rightpic
@@ -56,7 +57,7 @@
 
 .form-control::placeholder{
     font-family: "Inter", sans-serif;
-    font-size:1rem;
+    font-size:1.2rem;
     font-weight: 500;
 }
 
@@ -68,7 +69,7 @@
     cursor: pointer;
     width: 100%;
     border-radius: 12px;
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
