--- a/signupForm/static/signupForm/form.css
+++ b/signupForm/static/signupForm/form.css
@@ -84,3 +84,23 @@
     padding-left:10px;
    padding-top: 16px;
 } 
+
+.errorlist
+{
+    list-style:none;
+    margin:0.5rem 0;
+    padding:0;
+    color:red;
+}
+
+
+.errors input
+{
+   border-color: red; 
+   background-color: white;
+}
+
+.errors label
+{
+    color:red;
+}
