--- a/signupForm/templates/signupForm/register1.html
+++ b/signupForm/templates/signupForm/register1.html
@@ -28,7 +28,7 @@
           </form>
         </div>
         <div class="col-md-6">
-          <img src="{% static 'img/sidepic.jpg' %}" alt="responsive-img" class="img-fluid rightpic" />
+          <img src="{% static 'signupForm/img/sidepic.jpg' %}" alt="responsive-img" class="img-fluid rightpic" />
         </div>
       </div>
     </div>
