--- a/signupForm/templates/signupForm/navbar.html
+++ b/signupForm/templates/signupForm/navbar.html
@@ -25,7 +25,7 @@
                   <a class="nav-link  mx-3 mx-3 text-black fs-5" href="{% url 'register' %}">Register</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link  mx-3 mx-3 text-black fs-5" href="#">Login</a>
+                  <a class="nav-link  mx-3 mx-3 text-black fs-5" href="{% url 'login' %}">Login</a>
                 </li>
             </ul>
           </div>
